--- a/wp-content/themes/genrev/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/genrev/resources/assets/styles/common/_variables.scss
@@ -4,7 +4,7 @@
 // Colors
 $black:                 #333;
 $white:                 #fff;
-
+$offwhite:              #eef0fc;
 $brand-primary:         #cf5537;
 $brand-secondary:       #e39242;
 $brand-blue:            #66909c;
