--- a/wp-content/themes/genrev/resources/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/genrev/resources/assets/styles/components/_buttons.scss
@@ -35,6 +35,15 @@ a.btn {
     }
   }
 
+  &.btn-red {
+    background-color: $brand-primary;
+
+    &:hover,
+    &:focus {
+      background-color: lighten($brand-primary, 15%);
+    }
+  }
+
   &.btn-lg {
     @include laptop {
       padding: 20px 45px;
