--- a/wp-content/themes/genrev/resources/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/genrev/resources/assets/styles/layouts/_footer.scss
@@ -1,11 +1,95 @@
-// footer.content-info {
-//
-// }
+section.footer-hero {
+  position: relative;
+  margin-top: 0 !important;
+
+  &::before {
+    display: none !important;
+  }
+
+  .container {
+    .cta {
+      padding-top: 0;
+      justify-content: center;
+
+      .cta-text {
+        margin-top: 0;
+      }
+
+      p {
+        max-width: 420px;
+      }
+    }
+  }
+
+  @include laptop {
+    .container {
+      height: 500px;
+      padding-left: 90px;
+    }
+  }
+}
+
+footer.content-info {
+  background-color: #333333;
+  padding: 15px 0;
+  text-align: center;
+
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  a {
+    display: inline-block;
+    padding: 0 12px;
+
+    &.fb {
+      color: #6680b6;
+    }
+
+    &:hover,
+    &:focus {
+      color: $brand-secondary;
+    }
+  }
+
+  ul {
+    padding: 25px 0 15px;
+
+    li {
+      a {
+        color: #fff;
+        font-size: 16px;
+      }
+
+      &:hover,
+      &:focus {
+        a {
+          color: $brand-secondary;
+        }
+      }
+    }
+  }
+
+  @include tablet {
+    padding: 30px 0;
+  }
+
+  @include laptop {
+    padding: 60px 0;
+  }
+}
 
 .copyright {
   background-color: #191919;
   color: #fff;
   text-align: center;
-  font-size: 14px;
-  padding-bottom: 15px;
+  font-size: 12px;
+  padding: 5px;
+
+  .col-copyright {
+    text-align: center;
+  }
 }
