--- a/wp-content/themes/genrev/resources/assets/styles/layouts/_front-page.scss
+++ b/wp-content/themes/genrev/resources/assets/styles/layouts/_front-page.scss
@@ -25,11 +25,33 @@ section.about {
     align-items: center;
     flex-direction: column;
 
+    a.btn {
+      margin-bottom: 15px;
+    }
+
+    .image-box {
+      position: relative;
+      display: block;
+      height: 200px;
+      width: 100%;
+      flex-grow: 0;
+      flex-shrink: 0;
+    }
+
     @include tablet {
       flex-direction: row;
 
       p {
         padding-right: 30px;
+      }
+
+      a.btn {
+        margin-bottom: 0;
+      }
+
+      .image-box {
+        height: 294px;
+        width: 351px;
       }
     }
   }
