--- a/wp-content/themes/genrev/resources/assets/styles/components/_forms.scss
+++ b/wp-content/themes/genrev/resources/assets/styles/components/_forms.scss
@@ -43,6 +43,7 @@
         border: transparent;
         display: block;
         padding: 15px;
+        background-color: #ececec;
       }
 
       textarea {
@@ -58,4 +59,8 @@
   border: solid 3px #fff;
   font-size: 22px;
   padding: 15px;
+}
+
+#field_1_5 label {
+  display: none;
 }
